--- a/emoCardsSadness.html
+++ b/emoCardsSadness.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-8646ab9c.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-36e1cdcf.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -249,109 +249,187 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script>
-      let imgSadness01 = "https://wavemocards.com/frontend/upload/06-sadness/sadness01-helpless.svg";
-      let imgSadness02 = "https://wavemocards.com/frontend/upload/06-sadness/sadness02-setback.svg";
-      let imgSadness03 = "https://wavemocards.com/frontend/upload/06-sadness/sadness03-disappointed.svg";
-      let imgSadness04 = "https://wavemocards.com/frontend/upload/06-sadness/sadness04-powerless.svg";
-      let imgSadness05 = "https://wavemocards.com/frontend/upload/06-sadness/sadness05-frustrated.svg";
-      let imgSadness06 = "https://wavemocards.com/frontend/upload/06-sadness/sadness06-sad.svg";
-      let imgSadness07 = "https://wavemocards.com/frontend/upload/06-sadness/sadness07-powerless.svg";
-      let imgSadness08 = "https://wavemocards.com/frontend/upload/06-sadness/sadness08-sorrow.svg";
-      let imgSadness09 = "https://wavemocards.com/frontend/upload/06-sadness/sadness09-heartache.svg";
-      let imgSadness10 = "https://wavemocards.com/frontend/upload/06-sadness/sadness10-depressed.svg";
-      let imgSadness11 = "https://wavemocards.com/frontend/upload/06-sadness/sadness11-collapse.svg";
-      let imgSadness12 = "https://wavemocards.com/frontend/upload/06-sadness/sadness12-despair.svg";
+      // let imgSadness01 = "https://wavemocards.com/frontend/upload/06-sadness/sadness01-helpless.svg";
+      // let imgSadness02 = "https://wavemocards.com/frontend/upload/06-sadness/sadness02-setback.svg";
+      // let imgSadness03 = "https://wavemocards.com/frontend/upload/06-sadness/sadness03-disappointed.svg";
+      // let imgSadness04 = "https://wavemocards.com/frontend/upload/06-sadness/sadness04-powerless.svg";
+      // let imgSadness05 = "https://wavemocards.com/frontend/upload/06-sadness/sadness05-frustrated.svg";
+      // let imgSadness06 = "https://wavemocards.com/frontend/upload/06-sadness/sadness06-sad.svg";
+      // let imgSadness07 = "https://wavemocards.com/frontend/upload/06-sadness/sadness07-powerless.svg";
+      // let imgSadness08 = "https://wavemocards.com/frontend/upload/06-sadness/sadness08-sorrow.svg";
+      // let imgSadness09 = "https://wavemocards.com/frontend/upload/06-sadness/sadness09-heartache.svg";
+      // let imgSadness10 = "https://wavemocards.com/frontend/upload/06-sadness/sadness10-depressed.svg";
+      // let imgSadness11 = "https://wavemocards.com/frontend/upload/06-sadness/sadness11-collapse.svg";
+      // let imgSadness12 = "https://wavemocards.com/frontend/upload/06-sadness/sadness12-despair.svg";
 
       const sadnessCards = document.querySelector('#sadnessCards');
       const listModal = document.querySelector('.list');
 
-      axios.get("http://api.wavemocards.com/emotions?requirement=cards")
+      axios.get("http://api2.wavemocards.com/emotions?require=cards")
       .then(function(response){
-        let aryData = Object.values(response.data);
+        let aryData = Object.values(response.data); // 轉成「陣列」
+        let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
+
+        for(let i=0; i<aryData.length; i++){
+          aryData[i].id= aryIds[i];
+        }
+
+        // 展開卡
         initCards()
         function initCards() {
-          let strCards = "";
+            let strCardsSadness = "";
+            let emo;
+            aryData.forEach(function(data, i){
+              if(data.Category == "低落"){
+                  emo = "sadness";
+                  let contentCards = `
+                  <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                      <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+                      <div class="img-box">
+                      <img src="./upload/${data.id}.svg" alt="${data.Name}">
+                      </div>
+                  </button>`;
+                  strCardsSadness+=contentCards;
+              }
+            })
+            sadnessCards.innerHTML = strCardsSadness;
+        }
+
+        // 大情緒卡 Modal
+        initModal();
+        function initModal() {
           let strModal = "";
           let emo;
           aryData.forEach(function(data, i){
-            let imgSrc;
-            if(data.Category == "低落"){
+            if (data.Category == "低落") {
               emo = "sadness";
-              if(data.Name == "無奈") {
-                imgSrc = imgSadness01;
-              } else if (data.Name == "挫折") {
-                imgSrc = imgSadness02;
-              } else if (data.Name == "失望") {
-                imgSrc = imgSadness03;
-              } else if (data.Name == "無力") {
-                imgSrc = imgSadness04;
-              } else if (data.Name == "沮喪") {
-                imgSrc = imgSadness05;
-              } else if (data.Name == "難過") {
-                imgSrc = imgSadness06;
-              } else if (data.Name == "無助") {
-                imgSrc = imgSadness07;
-              } else if (data.Name == "悲傷") {
-                imgSrc = imgSadness08;
-              } else if (data.Name == "心痛") {
-                imgSrc = imgSadness09;
-              } else if (data.Name == "憂鬱") {
-                imgSrc = imgSadness10;
-              } else if (data.Name == "崩潰") {
-                imgSrc = imgSadness11;
-              } else if (data.Name == "絕望") {
-                imgSrc = imgSadness12;
-              }
-              let contentCards = `
-                <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                  <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-                  <div class="img-box">
-                    <img src="${imgSrc}}" alt="${data.Name}">
-                  </div>
-                </button>`;
-              let contentModals = `
-                <li>
-                  <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
-                      <div class="modal-content bg-${emo}">
-                        <div class="modal-body d-sm-flex justify-content-between align-items-center">
-                          <div class="box-bigCard-text">
-                            <div class="d-flex d-md-none w-100 justify-content-center">
-                              <div class="d-sm-none box-bigCard-img mb-8">
-                                <img class="w-100" src="${imgSrc}" alt="${data.Name}">
-                              </div>
-                            </div>
-                            <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-                              <h2>${data.Name}</h2>
-                              <!-- <a href="modifyEmoCard.html" role="button">
-                                  <i class="bi bi-pencil-square"></i>
-                              </a> -->
-                            </div>
-                            <div class="mb-16">
-                              <h3 class="mb-4">意思：</h3>
-                              <p>${data.Description}</p>
-                            </div>
-                            <div>
-                              <h3 class="mb-4">例句：</h3>
-                              <p>${data.Example}</p>
+            }
+            
+            let content = `
+              <li>
+                <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+                    <div class="modal-content bg-${emo}">
+                      <div class="modal-body d-sm-flex justify-content-between align-items-center">
+                        <div class="box-bigCard-text">
+                          <div class="d-flex d-md-none w-100 justify-content-center">
+                            <div class="d-sm-none box-bigCard-img mb-8">
+                              <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
                             </div>
                           </div>
-                          <div class="d-none d-sm-block box-bigCard-img">
-                            <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                          <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+                            <h2>${data.Name}</h2>
+                            <!-- <a href="modifyEmoCard.html" role="button">
+                                <i class="bi bi-pencil-square"></i>
+                            </a> -->
                           </div>
+                          <div class="mb-16">
+                            <h3 class="mb-4">意思：</h3>
+                            <p>${data.Description}</p>
+                          </div>
+                          <div>
+                            <h3 class="mb-4">例句：</h3>
+                            <p>${data.Example}</p>
+                          </div>
+                        </div>
+                        <div class="d-none d-sm-block box-bigCard-img">
+                          <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
                         </div>
                       </div>
                     </div>
                   </div>
-                </li>`;
-              strCards+=contentCards;
-              strModal+=contentModals;
-            }
+                </div>
+              </li>`;
+            strModal+=content;
           })
-          sadnessCards.innerHTML = strCards;
           listModal.innerHTML = strModal;
         }
+
       })
+      // let aryData = Object.values(response.data);
+      // initCards()
+      // function initCards() {
+      //   let strCards = "";
+      //   let strModal = "";
+      //   let emo;
+      //   aryData.forEach(function(data, i){
+      //     let imgSrc;
+      //     if(data.Category == "低落"){
+      //       emo = "sadness";
+      //       if(data.Name == "無奈") {
+      //         imgSrc = imgSadness01;
+      //       } else if (data.Name == "挫折") {
+      //         imgSrc = imgSadness02;
+      //       } else if (data.Name == "失望") {
+      //         imgSrc = imgSadness03;
+      //       } else if (data.Name == "無力") {
+      //         imgSrc = imgSadness04;
+      //       } else if (data.Name == "沮喪") {
+      //         imgSrc = imgSadness05;
+      //       } else if (data.Name == "難過") {
+      //         imgSrc = imgSadness06;
+      //       } else if (data.Name == "無助") {
+      //         imgSrc = imgSadness07;
+      //       } else if (data.Name == "悲傷") {
+      //         imgSrc = imgSadness08;
+      //       } else if (data.Name == "心痛") {
+      //         imgSrc = imgSadness09;
+      //       } else if (data.Name == "憂鬱") {
+      //         imgSrc = imgSadness10;
+      //       } else if (data.Name == "崩潰") {
+      //         imgSrc = imgSadness11;
+      //       } else if (data.Name == "絕望") {
+      //         imgSrc = imgSadness12;
+      //       }
+      //       let contentCards = `
+      //         <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+      //           <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+      //           <div class="img-box">
+      //             <img src="${imgSrc}}" alt="${data.Name}">
+      //           </div>
+      //         </button>`;
+      //       let contentModals = `
+      //         <li>
+      //           <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      //             <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+      //               <div class="modal-content bg-${emo}">
+      //                 <div class="modal-body d-sm-flex justify-content-between align-items-center">
+      //                   <div class="box-bigCard-text">
+      //                     <div class="d-flex d-md-none w-100 justify-content-center">
+      //                       <div class="d-sm-none box-bigCard-img mb-8">
+      //                         <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+      //                       </div>
+      //                     </div>
+      //                     <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+      //                       <h2>${data.Name}</h2>
+      //                       <!-- <a href="modifyEmoCard.html" role="button">
+      //                           <i class="bi bi-pencil-square"></i>
+      //                       </a> -->
+      //                     </div>
+      //                     <div class="mb-16">
+      //                       <h3 class="mb-4">意思：</h3>
+      //                       <p>${data.Description}</p>
+      //                     </div>
+      //                     <div>
+      //                       <h3 class="mb-4">例句：</h3>
+      //                       <p>${data.Example}</p>
+      //                     </div>
+      //                   </div>
+      //                   <div class="d-none d-sm-block box-bigCard-img">
+      //                     <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+      //                   </div>
+      //                 </div>
+      //               </div>
+      //             </div>
+      //           </div>
+      //         </li>`;
+      //       strCards+=contentCards;
+      //       strModal+=contentModals;
+      //     }
+      //   })
+      //   sadnessCards.innerHTML = strCards;
+      //   listModal.innerHTML = strModal;
+      // }
     </script>
   </body>
 </html>
