--- a/modifyEmoCard.html
+++ b/modifyEmoCard.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-8646ab9c.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-36e1cdcf.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -93,7 +93,7 @@
                     <!-- 上傳圖片 -->
                     <div class="w-100 d-flex justify-content-center align-items-end">
                         <div class="mb-16 addImg">
-                            <img class="w-100 h-100" src="/wavemocards/assets/happy02-happy-e05b473c.svg" alt="">
+                            <img class="w-100 h-100" src="../assets/images/01-happy/happy02-happy.svg" alt="">
                             <i class="bi bi-plus-circle-fill btn-add"></i>
                         </div>
                     </div>
