--- a/emoCardsHappy.html
+++ b/emoCardsHappy.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-8646ab9c.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-36e1cdcf.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -177,53 +177,58 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script>
-      let imgHappy01 = "https://wavemocards.com/frontend/upload/01-happy/happy01-statisfy.svg";
-      let imgHappy02 = "https://wavemocards.com/frontend/upload/01-happy/happy02-happy.svg";
-      let imgHappy03 = "https://wavemocards.com/frontend/upload/01-happy/happy03-happiness.svg";
-      let imgHappy04 = "https://wavemocards.com/frontend/upload/01-happy/happy04-proud.svg";
-      let imgHappy05 = "https://wavemocards.com/frontend/upload/01-happy/happy05-excited.svg";
-      let imgHappy06 = "https://wavemocards.com/frontend/upload/01-happy/happy06-cheerful.svg";
-      let imgHappy07 = "https://wavemocards.com/frontend/upload/01-happy/happy07-ecstasy.svg";
+      // let imgHappy01 = "https://wavemocards.com/frontend/upload/01-happy/happy01-statisfy.svg";
+      // let imgHappy02 = "https://wavemocards.com/frontend/upload/01-happy/happy02-happy.svg";
+      // let imgHappy03 = "https://wavemocards.com/frontend/upload/01-happy/happy03-happiness.svg";
+      // let imgHappy04 = "https://wavemocards.com/frontend/upload/01-happy/happy04-proud.svg";
+      // let imgHappy05 = "https://wavemocards.com/frontend/upload/01-happy/happy05-excited.svg";
+      // let imgHappy06 = "https://wavemocards.com/frontend/upload/01-happy/happy06-cheerful.svg";
+      // let imgHappy07 = "https://wavemocards.com/frontend/upload/01-happy/happy07-ecstasy.svg";
 
       const happyCards = document.querySelector('#happyCards');
       const listModal = document.querySelector('.list');
 
-      axios.get("http://api.wavemocards.com/emotions?requirement=cards")
+      axios.get("http://api2.wavemocards.com/emotions?require=cards")
       .then(function(response){
-        let aryData = Object.values(response.data);
+        let aryData = Object.values(response.data); // 轉成「陣列」
+        let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
+
+        for(let i=0; i<aryData.length; i++){
+          aryData[i].id= aryIds[i];
+        }
+
         initCards()
         function initCards() {
-          let strCards = "";
+            let strCardsHappy = "";
+            let emo;
+            aryData.forEach(function(data, i){
+              if(data.Category == "快樂"){
+                  emo = "happy";
+                  let contentCards = `
+                  <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                  <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+                  <div class="img-box">
+                      <img src="./upload/${data.id}.svg" alt="${data.Name}">
+                  </div>
+                  </button>`;
+                  strCardsHappy+=contentCards;
+              }
+              happyCards.innerHTML = strCardsHappy;
+            })
+          }
+
+        initModal();
+        function initModal() {
           let strModal = "";
           let emo;
           aryData.forEach(function(data, i){
-            let imgSrc;
-            if(data.Category == "快樂"){
-              emo = "happy";
-              if(data.Name == "滿足") {
-                imgSrc = imgHappy01;
-              } else if (data.Name == "快樂") {
-                imgSrc = imgHappy02;
-              } else if (data.Name == "幸福") {
-                imgSrc = imgHappy03;
-              } else if (data.Name == "自豪") {
-                imgSrc = imgHappy04;
-              } else if (data.Name == "興奮") {
-                imgSrc = imgHappy05;
-              } else if (data.Name == "痛快") {
-                imgSrc = imgHappy06;
-              } else if (data.Name == "狂喜") {
-                imgSrc = imgHappy07;
+            aryIds.forEach(function(id, index){
+              if(data.Category == "快樂") {
+                emo = "happy";
               }
-              let contentCards = `
-                <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                  <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-                  <div class="img-box">
-                    <img src="${imgSrc}}" alt="${data.Name}">
-                  </div>
-                </button>`;
-              let contentModals = `
-              <li>
+              
+              let content = `
+                <li>
                   <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
                       <div class="modal-content bg-${emo}">
@@ -231,7 +236,7 @@
                           <div class="box-bigCard-text">
                             <div class="d-flex d-md-none w-100 justify-content-center">
                               <div class="d-sm-none box-bigCard-img mb-8">
-                                <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                                <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
                               </div>
                             </div>
                             <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
@@ -250,21 +255,93 @@
                             </div>
                           </div>
                           <div class="d-none d-sm-block box-bigCard-img">
-                            <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                            <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </li>`;
-              strCards+=contentCards;
-              strModal+=contentModals;
-            }
+              strModal+=content;
+            })
           })
-          happyCards.innerHTML = strCards;
           listModal.innerHTML = strModal;
         }
       })
+          // let aryData = Object.values(response.data);
+          // initCards()
+          // function initCards() {
+          //   let strCards = "";
+          //   let strModal = "";
+          //   let emo;
+          //   aryData.forEach(function(data, i){
+          //     let imgSrc;
+          //     if(data.Category == "快樂"){
+          //       emo = "happy";
+          //       if(data.Name == "滿足") {
+          //         imgSrc = imgHappy01;
+          //       } else if (data.Name == "快樂") {
+          //         imgSrc = imgHappy02;
+          //       } else if (data.Name == "幸福") {
+          //         imgSrc = imgHappy03;
+          //       } else if (data.Name == "自豪") {
+          //         imgSrc = imgHappy04;
+          //       } else if (data.Name == "興奮") {
+          //         imgSrc = imgHappy05;
+          //       } else if (data.Name == "痛快") {
+          //         imgSrc = imgHappy06;
+          //       } else if (data.Name == "狂喜") {
+          //         imgSrc = imgHappy07;
+          //       }
+          //       let contentCards = `
+          //         <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+          //           <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+          //           <div class="img-box">
+          //             <img src="${imgSrc}}" alt="${data.Name}">
+          //           </div>
+          //         </button>`;
+          //       let contentModals = `
+          //       <li>
+          //           <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          //             <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+          //               <div class="modal-content bg-${emo}">
+          //                 <div class="modal-body d-sm-flex justify-content-between align-items-center">
+          //                   <div class="box-bigCard-text">
+          //                     <div class="d-flex d-md-none w-100 justify-content-center">
+          //                       <div class="d-sm-none box-bigCard-img mb-8">
+          //                         <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+          //                       </div>
+          //                     </div>
+          //                     <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+          //                       <h2>${data.Name}</h2>
+          //                       <!-- <a href="modifyEmoCard.html" role="button">
+          //                           <i class="bi bi-pencil-square"></i>
+          //                       </a> -->
+          //                     </div>
+          //                     <div class="mb-16">
+          //                       <h3 class="mb-4">意思：</h3>
+          //                       <p>${data.Description}</p>
+          //                     </div>
+          //                     <div>
+          //                       <h3 class="mb-4">例句：</h3>
+          //                       <p>${data.Example}</p>
+          //                     </div>
+          //                   </div>
+          //                   <div class="d-none d-sm-block box-bigCard-img">
+          //                     <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+          //                   </div>
+          //                 </div>
+          //               </div>
+          //             </div>
+          //           </div>
+          //         </li>`;
+          //       strCards+=contentCards;
+          //       strModal+=contentModals;
+          //     }
+          //   })
+          //   happyCards.innerHTML = strCards;
+          //   listModal.innerHTML = strModal;
+          // }
     </script>
   </body>
 </html>
