--- a/myEmoCardsHolder.html
+++ b/myEmoCardsHolder.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-8646ab9c.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-36e1cdcf.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
     </head>
     <body>
         <div class="" id="top"></div>
@@ -139,7 +139,7 @@
                         <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#deleteExpectation01">
                             <p>期&nbsp;待</p>
                             <div class="img-box">
-                                <img src="/wavemocards/assets/expaction01-expect-ac34e17e.svg" alt="期待">
+                                <img src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
                             </div>
                         </button>
                     </div>
@@ -245,7 +245,7 @@
                 <div class="box-bigCard-text">
                     <div class="d-flex d-md-none w-100 justify-content-center">
                         <div class="d-sm-none box-bigCard-img mb-8">
-                            <img class="w-100" src="/wavemocards/assets/expaction01-expect-ac34e17e.svg" alt="期待">
+                            <img class="w-100" src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
                         </div>
                     </div>
                     <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
@@ -264,7 +264,7 @@
                     </div>
                 </div>
                 <div class="d-none d-sm-block box-bigCard-img">
-                    <img class="w-100" src="/wavemocards/assets/expaction01-expect-ac34e17e.svg" alt="期待">
+                    <img class="w-100" src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
                 </div>
             </div>
         </div>
