Connect data at find emo pages

--- a/pages/findMyEmotions.html
+++ b/pages/findMyEmotions.html
@@ -35,7 +35,7 @@
             
             <!-- 分類探索 -->
             <div class="d-md-none mt-md-24 d-flex justify-content-center">
-              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill text-nowrap" href="findEmoClassifiedExpand.html">
+              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill text-nowrap" href="findEmoCards.html">
                 開始探索
               </a>
             </div>
@@ -53,7 +53,7 @@
               
             </div>
             <div class="d-none d-md-flex mt-24 justify-content-center">
-              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill" href="findEmoClassifiedExpand.html">
+              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill" href="findEmoCards.html">
                 開始探索
               </a>
             </div>
