--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -51,7 +51,7 @@
                     <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
                         <h2 class="fs-3">我的情緒卡夾</h2>
                         <div class="nav-btn d-flex justify-content-end">
-                            <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoClassified.html">
+                            <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoCards.html">
                                 <span class="d-none d-sm-block">回到情緒卡</span>
                                 <span class="d-sm-none">上一步</span>
                             </a>
