--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -279,32 +279,8 @@
 
     <%- include('./layout/baseJs'); -%>
     <script src="../assets/js/pages/changStyleOfCards.js"></script>
-    <!-- <script src="../assets/js/pages/getEmoCardsExpanded.js"></script> -->
     <script>
-      // 情緒表
-      const buttonsHappy = document.querySelector('#buttonsHappy');
-      const buttonsExpectation = document.querySelector('#buttonsExpectation');
-      const buttonsRelived = document.querySelector('#buttonsRelived');
-      const buttonsUnstable = document.querySelector('#buttonsUnstable');
-      const buttonsAmazed = document.querySelector('#buttonsAmazed');
-      const buttonsSadness = document.querySelector('#buttonsSadness');
-      const buttonsHate = document.querySelector('#buttonsHate');
-      const buttonsAnger = document.querySelector('#buttonsAnger');
-      const buttonsOthers = document.querySelector('#buttonsOthers');
-      // cards
-      const happyCards = document.querySelector('#happyCards');
-      const expectationCards = document.querySelector('#expectationCards');
-      const relivedCards = document.querySelector('#relivedCards');
-      const unstableCards = document.querySelector('#unstableCards');
-      const amazedCards = document.querySelector('#amazedCards');
-      const sadnessCards = document.querySelector('#sadnessCards');
-      const hateCards = document.querySelector('#hateCards');
-      const angerCards = document.querySelector('#angerCards');
-      const othersCards = document.querySelector('#othersCards');
-      // Big Cards
-      const listModal = document.querySelector('.listModal');
-
-      //  手風琴開合紀錄
+      //  手風琴開合紀錄 關於情緒頁面用
       const collapseOne = document.querySelector('#collapseOne');
       let recAccordionOpen = localStorage.getItem("accordionOpen");
       if(recAccordionOpen=="false"){
@@ -327,7 +303,29 @@
           localStorage.setItem("accordionOpen", accordionOpen);
         }
       })
-      
+
+      // 情緒表
+      const buttonsHappy = document.querySelector('#buttonsHappy');
+      const buttonsExpectation = document.querySelector('#buttonsExpectation');
+      const buttonsRelived = document.querySelector('#buttonsRelived');
+      const buttonsUnstable = document.querySelector('#buttonsUnstable');
+      const buttonsAmazed = document.querySelector('#buttonsAmazed');
+      const buttonsSadness = document.querySelector('#buttonsSadness');
+      const buttonsHate = document.querySelector('#buttonsHate');
+      const buttonsAnger = document.querySelector('#buttonsAnger');
+      const buttonsOthers = document.querySelector('#buttonsOthers');
+      // cards
+      const happyCards = document.querySelector('#happyCards');
+      const expectationCards = document.querySelector('#expectationCards');
+      const relivedCards = document.querySelector('#relivedCards');
+      const unstableCards = document.querySelector('#unstableCards');
+      const amazedCards = document.querySelector('#amazedCards');
+      const sadnessCards = document.querySelector('#sadnessCards');
+      const hateCards = document.querySelector('#hateCards');
+      const angerCards = document.querySelector('#angerCards');
+      const othersCards = document.querySelector('#othersCards');
+      // Big Cards
+      const listModal = document.querySelector('.listModal');
 
       axios.get("http://api2.wavemocards.com/emotions?require=cards")
       .then(function(response){
