--- a/emoCardsClassified.html
+++ b/emoCardsClassified.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-626d1fdd.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-06c05151.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -418,32 +418,8 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script src="../assets/js/pages/changStyleOfCards.js"></script>
-    <!-- <script src="../assets/js/pages/getEmoCardsExpanded.js"></script> -->
     <script>
-      // 情緒表
-      const buttonsHappy = document.querySelector('#buttonsHappy');
-      const buttonsExpectation = document.querySelector('#buttonsExpectation');
-      const buttonsRelived = document.querySelector('#buttonsRelived');
-      const buttonsUnstable = document.querySelector('#buttonsUnstable');
-      const buttonsAmazed = document.querySelector('#buttonsAmazed');
-      const buttonsSadness = document.querySelector('#buttonsSadness');
-      const buttonsHate = document.querySelector('#buttonsHate');
-      const buttonsAnger = document.querySelector('#buttonsAnger');
-      const buttonsOthers = document.querySelector('#buttonsOthers');
-      // cards
-      const happyCards = document.querySelector('#happyCards');
-      const expectationCards = document.querySelector('#expectationCards');
-      const relivedCards = document.querySelector('#relivedCards');
-      const unstableCards = document.querySelector('#unstableCards');
-      const amazedCards = document.querySelector('#amazedCards');
-      const sadnessCards = document.querySelector('#sadnessCards');
-      const hateCards = document.querySelector('#hateCards');
-      const angerCards = document.querySelector('#angerCards');
-      const othersCards = document.querySelector('#othersCards');
-      // Big Cards
-      const listModal = document.querySelector('.listModal');
-
-      //  手風琴開合紀錄
+      //  手風琴開合紀錄 關於情緒頁面用
       const collapseOne = document.querySelector('#collapseOne');
       let recAccordionOpen = localStorage.getItem("accordionOpen");
       if(recAccordionOpen=="false"){
@@ -466,7 +442,29 @@
           localStorage.setItem("accordionOpen", accordionOpen);
         }
       })
-      
+
+      // 情緒表
+      const buttonsHappy = document.querySelector('#buttonsHappy');
+      const buttonsExpectation = document.querySelector('#buttonsExpectation');
+      const buttonsRelived = document.querySelector('#buttonsRelived');
+      const buttonsUnstable = document.querySelector('#buttonsUnstable');
+      const buttonsAmazed = document.querySelector('#buttonsAmazed');
+      const buttonsSadness = document.querySelector('#buttonsSadness');
+      const buttonsHate = document.querySelector('#buttonsHate');
+      const buttonsAnger = document.querySelector('#buttonsAnger');
+      const buttonsOthers = document.querySelector('#buttonsOthers');
+      // cards
+      const happyCards = document.querySelector('#happyCards');
+      const expectationCards = document.querySelector('#expectationCards');
+      const relivedCards = document.querySelector('#relivedCards');
+      const unstableCards = document.querySelector('#unstableCards');
+      const amazedCards = document.querySelector('#amazedCards');
+      const sadnessCards = document.querySelector('#sadnessCards');
+      const hateCards = document.querySelector('#hateCards');
+      const angerCards = document.querySelector('#angerCards');
+      const othersCards = document.querySelector('#othersCards');
+      // Big Cards
+      const listModal = document.querySelector('.listModal');
 
       axios.get("http://api2.wavemocards.com/emotions?require=cards")
       .then(function(response){
