--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-626d1fdd.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-06c05151.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -98,7 +98,7 @@
             
             <!-- 分類探索 -->
             <div class="d-md-none mt-md-24 d-flex justify-content-center">
-              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill text-nowrap" href="findEmoClassifiedExpand.html">
+              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill text-nowrap" href="findEmoCards.html">
                 開始探索
               </a>
             </div>
@@ -116,7 +116,7 @@
               
             </div>
             <div class="d-none d-md-flex mt-24 justify-content-center">
-              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill" href="findEmoClassifiedExpand.html">
+              <a class="w-75 mt-8 mb-4 px-56 py-24 btn-find d-flex justify-content-center align-items-center rounded-pill" href="findEmoCards.html">
                 開始探索
               </a>
             </div>
