--- a/myEmoCardsHolder.html
+++ b/myEmoCardsHolder.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-79d2df86.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-b62d9bb2.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-626d1fdd.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-06c05151.css">
     </head>
     <body>
         <div class="" id="top"></div>
@@ -114,7 +114,7 @@
                     <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
                         <h2 class="fs-3">我的情緒卡夾</h2>
                         <div class="nav-btn d-flex justify-content-end">
-                            <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoClassified.html">
+                            <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoCards.html">
                                 <span class="d-none d-sm-block">回到情緒卡</span>
                                 <span class="d-sm-none">上一步</span>
                             </a>
