set function about add card

--- a/pages/findEmoHappy.html
+++ b/pages/findEmoHappy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜快樂</title>
+    <title>浪潮情緒卡｜探索情緒｜快樂</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
