--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>浪潮情緒卡｜情緒卡-分類</title>
+    <title>浪潮情緒卡｜認識情緒｜情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
